force-app/main/default/objects/GFERP__Item_Category__c/GFERP__Item_Category__c.object-meta.xml
<CustomObject>
    <label>Item Category</label>
    <nameField>
        <label>Item Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>