force-app/main/default/objects/GFERP__Item_Category__c/fields/Fine_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Fine_Line_Id__c</fullName>
    <displayFormat>FL{0000}</displayFormat>
    <label>Fine Line Id</label>
    <type>AutoNumber</type>
</CustomField>