force-app/main/default/objects/GFERP__Item_Category__c/fields/GFERP__Description__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Description__c</fullName>
    <inlineHelpText>The description of the item category.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>