force-app/main/default/objects/GFERP__Item_Category__c/fields/Page_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Page_Keywords__c</fullName>
    <label>Page Keywords</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>