force-app/main/default/objects/GFERP__Item_Category__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subcategory</label>
    <referenceTo>Subcategory__c</referenceTo>
    <relationshipLabel>Item Categories</relationshipLabel>
    <relationshipName>Item_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>