force-app/main/default/objects/GFERP__Item_Category__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>