force-app/main/default/objects/GFERP__Item_Category__c/listViews/GFERP__All.listView-meta.xml
<ListView>
    <fullName>GFERP__All</fullName>
    <columns>NAME</columns>
    <columns>GFERP__Description__c</columns>
    <columns>Parent__c</columns>
    <columns>Fine_Line_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>